# dev-knot

./: .gitignore  LOG.md  README.md  loader.py  main.py  pyproject.toml  utils.py
bash/: long_add.sh  run.sh  setup.sh
cache/: knowedge_5rknot-o1  knowedge_5rknot-o3-mini-high  knowedge_rknot-o4-mini-high  script_5rknot-4o  script_5rknot-chatgpt-4o-latest  script_5rknot-chatgpt-4o-latest.10  script_5rknot-o1  script_5rknot-o3-mini-high
cache/new/: knowledge_5rknot-chatgpt-4o-latest  script_5rknot-chatgpt-4o-latest
data/: create_addition.py  create_few_shot.py  divide_keyword.py  make_yelp.py  old_make_yelp.py
data/GSM/: note
data/_gsm_symbolic/: note
data/addition/: 100.csv  1000.csv  125.csv  150.csv  16.csv  175.csv  200.csv  25.csv  300.csv  32.csv  400.csv  50.csv  500.csv  600.csv  700.csv  75.csv  8.csv  800.csv  900.csv
data/arithmetic/: nd10.csv  nd15.csv  nd25.csv  nd5.csv
data/game24/: enum.py  simple_enum.py
data/healthcare/: all_workflow.json  generate.py  generated_patient_cases.csv  (+2 more)
graph-of-thoughts/: run_code.sh
hack/: knowledge_prompt  o1knowledge  o1script  script_prompt
output/: cot_gsm_symbolic.json  knot_addition_8.json  knot_gsm_symbolic.json  rknot_game24.json  zerocot_gsm_symbolic.json
ref_past/: README.md  prompt.py  pyproject.toml  rec1.txt  rec2.txt  rec4.txt  record.txt  script.py  utils.py
schemes/: __init__.py  aot.py  aot_openai.py  base.py  cot.py  drknot.py  enum3  enum4  fiverknote.py  ggknot.py  gknot.py  got.py  knot.py  l2m.py  prompt_generator.py  ps.py  rknot.py  sd.py  simple_enum4  sp.py  top.py  tot.py
(+197 files in other folders)
