[project]
name = "dev-knot"
version = "0.1.0"
description = "Knowledgeable Network of Thought framework for reasoning with Large Language Models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.68.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["schemes"]